--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>The Mountains of Madness </title>
-    <link rel="stylesheet" href="mountainMadness.css">
+    <link rel="stylesheet" href="styles/mountainMadness.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
@@ -22,19 +22,19 @@
                 <!--radio buttons final-->
                 <!--slide images inicio-->
                 <div class="slide first ">
-                    <img src="1.jpg " alt=" ">
+                    <img src="pictures/1.jpg " alt=" ">
                     <diV class="texto ">
                         <h1>Nice Weather</h1>
                     </diV>
                 </div>
                 <div class="slide ">
-                    <img src="2.jpg " alt=" ">
+                    <img src="pictures/2.jpg " alt=" ">
                     <diV class="texto ">
                         <h1>Stunning Architecture</h1>
                     </diV>
                 </div>
                 <div class="slide ">
-                    <img src="3.jpg " alt=" ">
+                    <img src="pictures/3.jpg " alt=" ">
                     <diV class="texto ">
                         <h1>Unbelievable Wildlife</h1>
                     </diV>
@@ -102,5 +102,5 @@
     </footer>
 
 
-    <script src="mountainMadness.js "></script>
+    <script src="scripts/mountainMadness.js "></script>
 </body>
